TG-XXX fix(datagrids): fix button spacing on datagrids

--- a/css/utils/_datagrid.scss
+++ b/css/utils/_datagrid.scss
@@ -84,6 +84,10 @@ clr-datagrid {
         }
     }
 
+    .btn-link, .btn-sm {
+        margin: 0!important;
+    }
+
     .datagrid-footer {
         .btn-sm {
             margin-top: 5px;
